kuberentes/ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-deployment
  labels:
    app: microservice
    version: v1
spec:
  selector:
    matchLabels:
      app: microservice
  replicas: 1
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
      - name: microservice
        image: microservice:1.0.0
        ports:
        - containerPort: 8080
