kuberentes/ms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-svc-v1
spec:
  selector:
    app: microservice
    version: v1
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: http
